NAS-116715: Fix alignment in tree table. Fix mobile details panel back button

--- a/src/app/pages/datasets/components/dataset-management/dataset-management.component.scss
+++ b/src/app/pages/datasets/components/dataset-management/dataset-management.component.scss
@@ -277,6 +277,7 @@ ix-dataset-details-panel {
 }
 
 .dataset-nested-tree-root-node ix-icon.mobile-actions,
+.ix-tree-node ix-icon.mobile-actions,
 .ix-nested-tree-node ix-icon.mobile-actions {
   display: none;
 
